Fix sticker being cropped in reply message (#148)

--- a/src/pages/main/components/middle/Message.scss
+++ b/src/pages/main/components/middle/Message.scss
@@ -269,6 +269,7 @@
     .media-content {
       line-height: 1;
       font-size: 1rem;
+      flex-shrink: 0;
     }
 
     .forwarded-message {
